Courtney Cavin - Sat Jul 30 2005
	added initial i18n/l10n support

Scott Lawrence - Sun Jul 24 2005
	Dialog.c added (modal dialog with timeout)
	Header stuff pulled out into header.c from pz.c
	(prev) PodDraw: Colorized, added file saver
	(prev) Mandelpod working display changed to pz_header text

Courtney Cavin - Sat Jul 16 2005
	integrated coob's new settings system
	allowed font changing without restarting

Scott Lawrence - Tue Jul 14 2005
	Display of load average in title bar
	Display of battery level as a digit instead of graphically

Adam Johnston - Thu Jul 14 2005
	Added standy mode support for 3g and newer ipods

Adam Johnston - Wed Jul 13 2005
	Added charging status support for 3g and newer ipods

Scott Lawrence - Tue Jul 12 2005
	Battery level displays and animates if low.
	Charging indicator added, although not used yet

Adam Johnston - Tue Jul 12 2005
	Added Battery level support for 3g and newer iPods

Scott Lawrence - Mon Jul 11 2005
	Removed most new glitches from mlist.c (XOR-inversion issue remains)
	Added m:robe color scheme (from Stuart Clark)
	Added Decorations control with: Plain, Amiga 1.1, Amiga 1.3, m:robe
	Appearance settings moved to their own menu

Scott Lawrence - Sun Jul 10 2005
	Added some more (crappy) color schemes, and a monochrome-inverted scheme
	Full menu color scheming done (although it's a little glitchy)
	(previously) Added 5+ second MENU contrast restore feature

Courtney Cavin - Sun Jul 10 2005
	added browser directory sorting, case-insensitive alpha, dirs first
	added 'Show Hidden Files' setting
	changed '..' to '.. [Parent Directory]'

Scott Lawrence - Sat Jul 9 2005
	Added appearance-based color scheming support
	Added color scheme to settings, message, fixes for games, etc
	(previously) Added Mandelpod
	(previously) Integrated mikmod support

Matthew Westcott - Sun Jun 5 2005
	Added TZX (speecy cart) playback

Adam Johnston - Sun Jun  5 2005
	Added basic uncompressed video playback

Scott Lawrence - Sun May 29 2005