@@ -1,3 +1,7 @@
+Jeffrey Nelson - Wed Aug 10 2005
+	Podzilla now asks if you want to reboot your iPod when there is 
+	FireWire connectivity for 1-3G iPods.
+
 Courtney Cavin - Sat Jul 30 2005
 	added initial i18n/l10n support
 
